[gradle-plugin] Add smoke tests for multiplatform support

--- a/tools/kotlin-native-gradle-plugin/build.gradle
+++ b/tools/kotlin-native-gradle-plugin/build.gradle
@@ -95,6 +95,7 @@ shadowJar {
 }
 
 test {
+    systemProperty("kotlin.version", buildKotlinVersion)
     if (project.hasProperty("konan.home")) {
         systemProperty("konan.home", project.property("konan.home"))
     } else {
